# RCS_Vision

./: README.md
auto_aim_exec/: CMakeLists.txt  FindTensorRT.cmake  package.xml
auto_aim_exec/config/mindvision_camera/: camera_info.yaml  camera_info_8mm.yaml  camera_info_copy.yaml  camera_info_sj.yml
auto_aim_exec/include/kalman/: kalman.hpp  predict_kalman.hpp
auto_aim_exec/include/mindvision_camera/: mindvision_camera.hpp
auto_aim_exec/include/post_process/: post_process.hpp  utils.hpp
auto_aim_exec/include/serial/: Protocol.hpp  Serial_node.hpp  serial.hpp
auto_aim_exec/include/serial/impl/: unix.hpp  win.hpp
auto_aim_exec/include/target_detect/: target_detect_node.hpp  tools.hpp
auto_aim_exec/launch/mindvision_camera/: mv_launch.py
auto_aim_exec/launch/serial/: serial_test.py
auto_aim_exec/launch/target_detect/: component_test.py  component_test1.py  target_detect_launch.py
auto_aim_exec/model/: robomaster.names
auto_aim_exec/src/kalman/: predict_kalman.cpp
auto_aim_exec/src/mindvision_camera/: mv_camera_node.cpp
auto_aim_exec/src/post_process/: post_process.cpp  utils.cpp
auto_aim_exec/src/serial/: Serial_node.cpp  main.cpp  serial.cpp
auto_aim_exec/src/serial/impl/: unix.cpp  win.cpp
auto_aim_exec/src/serial/impl/list_ports/: list_ports_linux.cpp  list_ports_osx.cpp  list_ports_win.cpp
auto_aim_exec/src/target_detect/: target_detect_node.cpp  tools.cpp
auto_aim_interface/: CMakeLists.txt  package.xml
auto_aim_interface/msg/: ImuOutput.msg  ObjectDetOutput.msg  ProcessedImage.msg  TargetAngleOutput.msg
auto_aim_interface/srv/: ObjectDetect.srv
